--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,2 @@
-
-<h1>New POst</h1>
- 
+<% content_for :page_title, "Create a new post" %>
 <%= render 'form' %>
- 
-<%= link_to 'Back', posts_path %>
-
