--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <nav class="navbar">
       <div class="container">
         <div class="navbar-brand">
-           <%= link_to 'Blog', root_path, class: "navbar-item" %>
+           <%= link_to 'Home', posts_path, class: "navbar-item" %>
           <span class="navbar-burger burger" data-target="navbarMenuHeroB">
             <span></span>
             <span></span>
@@ -24,7 +24,7 @@
         </div>
         <div id="navbarMenuHeroB" class="navbar-menu">
           <div class="navbar-end">
-             <%= link_to "Create New Post", new_post_path, class:"navbar-item" %>
+             <%= link_to "Add New Post", new_post_path, class:"navbar-item" %>
 
           </div>
         </div>
