--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 
-<% content_for :page_title,  "Index" %>
+<% content_for :page_title,  "Posts" %>
 
 <div class="section">
 	<div class="container">
