--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,8 @@
 <div class="section">
 	<div class="container">
 		<% @posts.each do |post| %>
-			<div class="card">
+
+	<div class="card">
 		  <div class="card-content">
 		    <div class="media">
 		      <div class="media-content">
@@ -16,7 +17,16 @@
 		    </div>
 		    <div class="comment-count">
 		    	<span class="tag is-rounded"><%= post.comments.count %> comments</span>
-		    </div>
+		        
+            </div>
+            <div class="buttons">
+                <p class="level-item">
+		    	<%= link_to "Update", edit_post_path(post), class:"button is-info m-3" %>
+                <%= link_to "Show", post_path(post), class:"button is-info" %>
+                <%= link_to "Delete", post_path(post), class:"button is-danger", method: :delete %>
+		  	   </p>
+                 
+            </div>
 		  </div>
 		</div>
 		<% end %>
