--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 		  <!-- Right side -->
 		  <div class="level-right">
 		  	<p class="level-item">
-		    	<%= link_to "Edit", edit_post_path(@post), class:"button" %>
+		    	<%= link_to "Edit", edit_post_path(@post), class:"button is-info" %>
 		  	</p>
 		  	<p class="level-item">
 				<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, class:"button is-danger" %>
