--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
 
 
 <% content_for :page_title, "Edit Post" %>
-<%= render 'form' %>
+<%= render partial: 'form', locals: {btnt: "Update", btnc: "Info"} %>
