--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,7 @@
 		    <div class="media">
 		      <div class="media-content">
 		        <p class="title is-4"><%= link_to post.title, post  %></p>
+                 <p class="is-4"><%= link_to post.user.name, post %></p> 
 		      </div>
 		    </div>
 		    <div class="content">
