--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,2 @@
 <% content_for :page_title, "Create a new post" %>
-<%= render 'form' %>
+<%= render partial: 'form' , locals:{btnt: "Create", btnc: "Success"} %>
