add post validations

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,16 @@
+<% if @post.errors.any? %>
+<br />
+<br />
+<div class="notification is-danger">
+ 
+   <ul class="is-small">
+    <%= @post.errors.full_messages.each do |message|%>
+        <li><%= message %></li>
+    <% end %>
+   </ul>
+</div>
+<% end %>
+
 <div class="section">
 <%= simple_form_for @post do |f| %>
   <div class="field">
